kubernetes/apps/base/media/arr/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: advplyr/audiobookshelf
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /media
              name: audiobookshelf-media
            - mountPath: /temp
              name: audiobookshelf-temp
            - mountPath: /app/Data
              name: audiobookshelf-data
            - mountPath: /app/Logs
              name: audiobookshelf-logs
            - mountPath: /app/common
              name: audiobookshelf-common
      restartPolicy: Always
      volumes:
        - name: audiobookshelf-media
          persistentVolumeClaim:
            claimName: media
        - name: audiobookshelf-common
          persistentVolumeClaim:
            claimName: audiobookshelf-common
        - name: audiobookshelf-data
          persistentVolumeClaim:
            claimName: audiobookshelf-data
        - name: audiobookshelf-logs
          persistentVolumeClaim:
            claimName: audiobookshelf-logs
        - name: audiobookshelf-temp
          emptyDir:
            sizeLimit: 100Gi
