kubernetes/apps/base/media/arr/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
spec:
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 19200
      targetPort: 5000
