kubernetes/apps/base/media/arr/audiobookshelf/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`audiobookshelf.${cluster_domain}`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 19200
