kubernetes/apps/base/media/arr/audiobookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`audiobookshelf.${cluster_domain}`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 7878
